# WorkDataHubPro

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
config/policies/: evidence_redaction.json  publication.json
config/releases/: 2026-04-11-annual-award-baseline.json  2026-04-11-annuity-performance-baseline.json  2026-04-12-annual-loss-baseline.json  2026-04-14-annuity-income-baseline.json  temp_identity_policy.json
config/verification/: phase2-parity-gates.json
docs/disciplines/: git-workflow.md  implementation-execution.md  implementation-slice-workflow.md  implementation-toolchain.md  implementation-verification.md  serena-mcp-usage.md
docs/domains/: annual_award-capability-map.md  annual_loss-capability-map.md  annuity_income-capability-map.md  annuity_performance-capability-map.md
docs/runbooks/: agent-maintenance-workflow.md  annual-award-replay.md  annual-loss-replay.md  annuity-income-replay.md  annuity-performance-replay.md  legacy-semantic-map-first-wave-closeout.md  legacy-semantic-map-first-wave-pilot.md  performance-verification-matrix.md  phase2-parity-gates.md  phase2-verification-assets.md
docs/system/: document-authority-model.md  framework-neutral-foundation.md  index.md
docs/wiki-bi/: index.md  (+1 more)
scripts/: bootstrap_phase2_checkpoint_baselines.py  run_perf_matrix.py  run_phase2_parity_gates.py
tests/: __init__.py  conftest.py
(+677 files in other folders)
